compiler/tests/success/common/swap_word.jazz
export fn main (reg u32 x y) -> reg u32 {
  x, y = #swap(x, y);
  x = x;
  return x;
}