compiler/tests/fail/arm-m4/orr_imm_too_large.jazz
export
fn main(reg u32 x) {
    x = #ORR(x, 0x0000caca);
    [x] = x;
}
